--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -178,3 +178,7 @@
   }
 }
 
+.inputStyle {
+  @apply w-full px-4 py-2 rounded-md bg-neutral-800 text-white border border-cyan-600 focus:outline-none focus:ring-2 focus:ring-cyan-400 transition;
+}
+
