--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -3,6 +3,26 @@
 @import "tw-animate-css";
 @import "./styles/dashboard-cursor.css";
 
+/* Global dropdown styling to ensure visibility */
+select {
+  background-color: rgba(31, 41, 55, 0.8) !important;
+  color: white !important;
+}
+
+select option {
+  background-color: rgb(31, 41, 55) !important;
+  color: white !important;
+}
+
+select option:hover {
+  background-color: rgb(55, 65, 81) !important;
+}
+
+select:focus {
+  outline: none !important;
+  border-color: rgb(34, 211, 238) !important;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
